--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "nuxtjs",
+  "name": "vaughn-software-engineering-by-nuxt",
   "version": "1.0.0",
-  "description": "My astonishing Nuxt App",
-  "author": "msweeneydev",
+  "description": "Vaughn Software Engineering by NuxtJS",
+  "author": "Adam M. Vaughn",
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt generate",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "start": "nuxt start"
   },
   "dependencies": {
+    "bootstrap": "^5.1.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.0",
-    "nuxt": "^2.15.7"
-  },
-  "devDependencies": {}
+    "nuxt": "^2.15.7",
+    "vue": "^2.6.14"
+  }
 }
